--- a/index.css
+++ b/index.css
@@ -43,11 +43,12 @@ h1 {
 
 ul {
     list-style: none;
+    padding-left: 0;
 }
 
 li {
     display: inline-block;
-    margin: 0 15px;\
+    margin: 0 15px;
 }
 
 .main {
@@ -77,4 +78,12 @@ li {
 input[type="image"]{
     margin-top: 20px;
     margin-bottom: 20px;
+}
+
+.footer {
+    border: 1px black solid;
+    background-color: lightgray;
+    text-align: center;
+    position: relative;
+    bottom: 0;
 }
