--- a/index.css
+++ b/index.css
@@ -11,22 +11,6 @@
     position: relative;
 }
 
-.menu-btn {
-    position: absolute;
-    left: 20px;
-    top: 10px;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    background-color: darkgray;
-}
-
-.menu-bar{
-    width: 35px;
-    height: 5px;
-    background-color: black;
-    margin: 2px 0;
-}
-
 .logo {
     //display: inline-block;
     position: absolute;
@@ -57,11 +41,15 @@ li {
 }
 
 #aboutMe {
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     height: 100px;
     border: 1px black solid;
     background-color: lightgray;
+    line-height: 100px;
+}
+
+#aboutMe p {
+    margin: 0;
 }
 
 #portfolio {
@@ -86,4 +74,26 @@ input[type="image"]{
     text-align: center;
     position: relative;
     bottom: 0;
+}
+
+
+@media screen and (min-width: 768px){
+    .header {
+        text-align: left;
+        padding-left: 25px;
+        margin-left: 0;
+    }
+
+    .header-name {
+        display: inline-block;
+        left: 25px;
+    }
+
+    .menu {
+        display: inline-block;
+        position: absolute;
+        right: 25px;
+        padding-top: 15px;
+    }
+
 }
