Fixed styling issues

--- a/index.css
+++ b/index.css
@@ -9,13 +9,13 @@ body {
 
 
 .header {
-    border-bottom: 3px solid black;
+    border-bottom: 1px solid #282c34;
     text-align: center;
     position: fixed;
     top: 0;
     width: 100%;
-    background: #40414728;
-
+    background: #282c34;
+    
 }
 
 h1 {
