--- a/index.css
+++ b/index.css
@@ -47,9 +47,9 @@ li {
 }
 
 #aboutMe {
-    margin: 25px auto;
+    margin: 10px auto;
     word-wrap: break-word;
-    width: 60%;
+    width: 80%;
     text-align: left;
     padding-top: 50px;
 }
@@ -59,7 +59,7 @@ li {
 }
 
 #portfolio {
-    margin: 25px auto;
+    margin: 10px auto;
     padding-top: 25px;
 }
 
@@ -117,6 +117,11 @@ a {
     .contact-icons:hover:enabled {
       position: relative;
       top: -4px;
+    }
+
+    #aboutMe, #portfolio {
+      margin: 25px auto;
+      width: 60%;
     }
 
     a:link {
