--- a/index.css
+++ b/index.css
@@ -22,6 +22,10 @@ body {
   color: lightsteelblue;
 }
 
+.header-filler {
+  padding: 25px
+}
+
 h1 {
     margin-top: 20px;
     margin-bottom: 20px;
@@ -121,7 +125,6 @@ a {
 
     #aboutMe, #portfolio {
       margin: 25px auto;
-      width: 60%;
     }
 
     a:link {
