--- a/index.css
+++ b/index.css
@@ -16,16 +16,17 @@ body {
     width: 100%;
     background: #282c34;
     opacity: 1;
+    color: lightsteelblue;
 }
 
 .header-name {
-  color: lightsteelblue;
   font-size: 28px;
 }
 
 .header-filler {
   padding: 25px
 }
+
 
 h1 {
     margin-top: 20px;
@@ -77,6 +78,10 @@ h2, h3 {
     margin-right: 15%;
 }
 
+.link {
+  color: darkblue;
+}
+
 .image {
     width: 100%;
     border-radius: 20px;
@@ -95,8 +100,6 @@ h2, h3 {
     bottom: 0;
 }
 
-a {
-}
 
 @media screen and (min-width: 768px){
     .header {
